# offs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: client.rs  dbus_server.rs  main.rs
client/src/remote_fs_client/: error.rs  file_ops.rs  fs.rs  fuse_fs.rs  journal.rs  mod.rs
client/src/remote_fs_client/client/: grpc_client.rs  mod.rs  modify_op_builder.rs
client/src/remote_fs_client/fs/: error.rs  errors.rs  file_ops.rs  fs.rs  fuse_fs.rs  journal.rs  mod.rs  open_file_handler.rs  operation_handler.rs  write_buffer.rs
clientctl/: Cargo.toml
clientctl/src/: dbus_client.rs  main.rs
liboffs/: Cargo.toml  build.rs
liboffs/src/: dbus.rs  errors.rs  lib.rs  modify_op.rs  modify_op_handler.rs  timespec.rs  validators.rs
liboffs/src/proto/: converters.rs  filesystem.capnp  filesystem.proto  mod.rs
liboffs/src/store/: id_generator.rs  mod.rs  types.rs  wrapper.rs
liboffs/src/store/sql/: init.sql  init_client.sql
server/: Cargo.toml
server/src/: main.rs  server.rs
server/src/remote_fs/: grpc_server.rs  mod.rs  server.rs
