[package]
name = "offs-client"
version = "0.1.0"
authors = ["Mateusz Maćkowski <m4tx@m4tx.pl>"]
edition = "2018"

readme = "../README.md"
license = "MIT"
homepage = "https://github.com/m4tx/offs"
repository = "https://github.com/m4tx/offs"
description = "Distributed file system with offline work support (client library)"

[badges]
travis-ci = { repository = "m4tx/offs", branch = "master" }

[dependencies]
offs = { path = "../liboffs" }

futures = "0.1.28"
rusqlite = "0.19.0"
grpcio = "0.4.4"
protobuf = "2.8.0"

fuse = "0.3.1"
libc = "0.2.62"
time = "0.1.42"

clap = "2.33.0"
dbus = "0.6.5"
nix = "0.15.0"
ctrlc = "3.1.3"
itertools = "0.8.0"
