[package]
name = "offs-client"
version = "0.1.0"
authors = ["Mateusz Maćkowski <m4tx@m4tx.pl>"]
edition = "2018"

readme = "../README.md"
license = "MIT"
homepage = "https://github.com/m4tx/offs"
repository = "https://github.com/m4tx/offs"
description = "Distributed file system with offline work support (client library)"

[badges]
travis-ci = { repository = "m4tx/offs", branch = "master" }

[dependencies]
offs = { path = "../liboffs" }

log = "0.4.14"
stderrlog = "0.5.1"

futures = "0.3.16"
rusqlite = "0.25.3"

fuser = "0.8.0"
libc = "0.2.101"

clap = "2.33.3"
dbus = "0.9.3"
dbus-crossroads = "0.4.0"
nix = "0.22.1"
ctrlc = "3.2.0"
itertools = "0.10.1"

tonic = "0.5.2"
prost = "0.8.0"
tokio = { version = "1.10.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.7", features = ["net"] }
