[package]
name = "offs"
version = "0.1.0"
authors = ["Mateusz Maćkowski <m4tx@m4tx.pl>"]
edition = "2018"
build = "build.rs"

readme = "../README.md"
license = "MIT"
homepage = "https://github.com/m4tx/offs"
repository = "https://github.com/m4tx/offs"
description = "Distributed file system with offline work support (common library)"

[badges]
travis-ci = { repository = "m4tx/offs", branch = "master" }

[build-dependencies]
capnpc = "0.10.1"
protoc-grpcio = "1.0.2"

[dependencies]
capnp = "0.10.1"
grpcio = "0.4.4"

time = "0.1.42"

rusqlite = "0.19.0"

rand = "0.7.0"
num-derive = "0.2.5"
num-traits = "0.2.8"
itertools = "0.8.0"
sha2 = "0.8.0"
digest = "0.8.1"
hex = "0.3.2"
