[package]
name = "offs"
version = "0.1.0"
authors = ["Mateusz Maćkowski <m4tx@m4tx.pl>"]
edition = "2018"
build = "build.rs"

readme = "../README.md"
license = "MIT"
homepage = "https://github.com/m4tx/offs"
repository = "https://github.com/m4tx/offs"
description = "Distributed file system with offline work support (common library)"

[badges]
travis-ci = { repository = "m4tx/offs", branch = "master" }

[dependencies]
rusqlite = "0.25.3"

rand = "0.8.4"
num-derive = "0.3.3"
num-traits = "0.2.14"
itertools = "0.10.1"
sha2 = "0.9.5"
digest = "0.9.0"
hex = "0.4.3"

tonic = "0.5.2"
prost = "0.8.0"

[build-dependencies]
tonic-build = "0.5.2"
