[package]
name = "offs-server"
version = "0.1.0"
authors = ["Mateusz Maćkowski <m4tx@m4tx.pl>"]
edition = "2018"

readme = "../README.md"
license = "MIT"
homepage = "https://github.com/m4tx/offs"
repository = "https://github.com/m4tx/offs"
description = "Distributed file system with offline work support (server binary)"

[badges]
travis-ci = { repository = "m4tx/offs", branch = "master" }

[dependencies]
offs = { path = "../liboffs" }

tonic = "0.5.2"
prost = "0.8.0"
tokio = { version = "1.10.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.7", features = ["net"] }

chrono = "0.4.19"

itertools = "0.10.1"
clap = "2.33.3"
